# autoware_universe

./: .clang-tidy-ci  .clang-tidy-ignore  .cppcheck_macros.cfg  .cppcheck_suppressions  .cspell.json  .pre-commit-config.yaml  build_depends_humble.repos  build_depends_nightly.repos  build_depends_stable.repos  codecov.yaml  dry_steering_avoidance.md  mkdocs_macros.py  mkdocs_simple.yaml  mkdocs_temp.yaml  packages_above.repos  set_lanelet_route.py  versions.json
autoware_lane_change_panel/: CMakeLists.txt  lane_change_plugin.xml  package.xml
autoware_lane_change_panel/include/autoware_lane_change_panel/: lane_change_panel.hpp
autoware_lane_change_panel/src/: lane_change_panel.cpp
common/autoware_agnocast_wrapper/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
control/autoware_collision_detector/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
control/autoware_collision_detector/config/: collision_detector.param.yaml
control/autoware_collision_detector/launch/: collision_detector.launch.xml
control/autoware_collision_detector/src/: node.cpp
control/autoware_constant_jerk_deceleration_controller/: CMakeLists.txt  README.md  package.xml
control/autoware_constant_jerk_deceleration_controller/launch/: constant_jerk_deceleration_controller.launch.xml
control/autoware_constant_jerk_deceleration_controller/src/: constant_jerk_deceleration_controller.cpp  constant_jerk_deceleration_controller.hpp
control/autoware_external_cmd_selector/: CHANGELOG.rst  CMakeLists.txt  package.xml
control/autoware_external_cmd_selector/launch/: external_cmd_selector.launch.py
control/autoware_jerk_constant_deceleration_controller/: CMakeLists.txt  README.md  package.xml
control/autoware_jerk_constant_deceleration_controller/launch/: jerk_constant_deceleration_controller.launch.xml
control/autoware_jerk_constant_deceleration_controller/src/: jerk_constant_deceleration_controller.cpp  jerk_constant_deceleration_controller.hpp
control/autoware_lane_departure_checker/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
control/autoware_lane_departure_checker/config/: lane_departure_checker.param.yaml
control/autoware_lane_departure_checker/launch/: lane_departure_checker.launch.xml
e2e/autoware_tensorrt_oneplanner/: CMakeLists.txt  README.md  package.xml
e2e/autoware_tensorrt_oneplanner/config/: oneplanner.param.yaml
e2e/autoware_tensorrt_oneplanner/launch/: oneplanner.launch.xml
e2e/autoware_tensorrt_oneplanner/schema/: oneplanner.schema.json
e2e/autoware_tensorrt_oneplanner/src/: bev_encoder.cpp  oneplanner_core.cpp  oneplanner_node.cpp  planner_inference.cpp
e2e/autoware_tensorrt_oneplanner/test/: test_detail.cpp
localization/autoware_covariance_selector/: CMakeLists.txt  package.xml
localization/autoware_covariance_selector/config/: covariance_selector.param.yaml
localization/autoware_covariance_selector/launch/: covariance_selector.launch.xml
localization/autoware_covariance_selector/src/: covariance_selector.cpp  covariance_selector.hpp
localization/autoware_covariance_selector/test/: test_covariance_selector.cpp
localization/autoware_environment_adaptor/: CMakeLists.txt  README.md  package.xml
localization/autoware_environment_adaptor/config/: environment_adaptor.param.yaml
localization/autoware_environment_adaptor/doc/: degenerate_area_setup.md  map_annotation.md
localization/autoware_environment_adaptor/launch/: environment_adaptor.launch.xml
localization/autoware_environment_adaptor/schema/: environment_adaptor.schema.json
localization/autoware_environment_adaptor/src/: covariance_utils.hpp  environment_adaptor.cpp  environment_adaptor.hpp  environment_classifier.cpp  environment_classifier.hpp
localization/autoware_environment_adaptor/test/: test_environment_adaptor.cpp  test_environment_classifier.cpp  test_utils.hpp
localization/autoware_feature_environment_recognizer/: CMakeLists.txt  README.md  package.xml
localization/autoware_feature_environment_recognizer/launch/: feature_environment_recognizer.launch.xml
localization/autoware_feature_environment_recognizer/msg/: FeatureEnvironment.msg
localization/autoware_feature_environment_recognizer/src/: feature_environment_recognizer.cpp  feature_environment_recognizer.hpp
localization/autoware_localized_position_validator/: CMakeLists.txt  README.md  ThirdPartyNotices  package.xml
localization/autoware_localized_position_validator/config/: pointpillars_resnet18.param.yaml  validator.param.yaml
localization/autoware_localized_position_validator/launch/: localized_position_validator.launch.xml
localization/autoware_localized_position_validator/lib/: position_validator.cpp  position_validator.hpp
localization/autoware_localized_position_validator/scripts/: clone_libtorch.sh  download_libtorch.sh
localization/autoware_localized_position_validator/src/: node.cpp  node.hpp
localization/autoware_pose_covariance_modifier/: CHANGELOG.rst  CMakeLists.txt  package.xml
localization/autoware_pose_covariance_modifier/launch/: pose_covariance_modifier.launch.xml
localization/autoware_velocity_scale_selector/: CMakeLists.txt  package.xml
map/autoware_dynamic_lanelet2_map_provider/: CMakeLists.txt  README.md  package.xml
map/autoware_map_host/: CMakeLists.txt  README.md  package.xml  plugins.xml
map/autoware_map_host/config/: map_loader_host.param.yaml
perception/autoware_object_sorter/: CHANGELOG.rst  CMakeLists.txt  package.xml
perception/autoware_proximity_hazard_object_checker/: CMakeLists.txt  package.xml
perception/autoware_scene_understanding/: CMakeLists.txt  package.xml  readme.md
perception/autoware_simple_object_merger/: CHANGELOG.rst  CMakeLists.txt  package.xml
planning/autoware_avoidance_target_detector/: CMakeLists.txt  README.md  package.xml
planning/autoware_extra_scenario_selector/: CMakeLists.txt  README.md  package.xml  plugins.xml
planning/autoware_hazard_lights_selector/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
planning/autoware_lane_event_classifier/: CMakeLists.txt  README.md  package.xml
(+37011 files in other folders)
