<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_tensorrt_oneplanner</name>
  <version>0.47.0</version>
  <description>One-stage end-to-end planner combining a BEVFusion LiDAR encoder with a diffusion-planner head (OnePlanner)</description>
  <maintainer email="vborisw@gmail.com">Max-Bin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_bevfusion</depend>
  <depend>autoware_cuda_utils</depend>
  <depend>autoware_diffusion_planner</depend>
  <depend>autoware_internal_debug_msgs</depend>
  <depend>autoware_internal_planning_msgs</depend>
  <depend>autoware_lanelet2_extension</depend>
  <depend>autoware_lanelet2_utils</depend>
  <depend>autoware_map_msgs</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>autoware_planning_msgs</depend>
  <depend>autoware_point_types</depend>
  <depend>autoware_tensorrt_common</depend>
  <depend>autoware_utils</depend>
  <depend>autoware_utils_diagnostics</depend>
  <depend>autoware_utils_system</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>cuda_blackboard</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>autoware_tensorrt_plugins</exec_depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
