<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_velocity_scale_selector</name>
  <version>0.1.0</version>
  <description>ROS node that applies area-specific speed scale factor delta to twist based on environment classification derived from a lanelet2 map</description>
  <maintainer email="masahiro.sakamoto@tier4.jp">Motsu-san</maintainer>
  <license>Apache License 2.0</license>
  <author email="masahiro.sakamoto@tier4.jp">Motsu-san</author>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_internal_debug_msgs</depend>
  <depend>autoware_lanelet2_extension</depend>
  <depend>autoware_lanelet2_utils</depend>
  <depend>autoware_map_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
