<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_proximity_hazard_object_checker</name>
  <version>0.0.1</version>
  <description>Publishes per-sector proximity hazards for the L2 HMI alert function.</description>
  <maintainer email="zulfaqar.azmi@tier4.jp">Zulfaqar Azmi</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_perception_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>autoware_utils_geometry</depend>
  <depend>autoware_utils_math</depend>
  <depend>autoware_utils_rclcpp</depend>
  <depend>autoware_vehicle_info_utils</depend>
  <depend>builtin_interfaces</depend>
  <depend>generate_parameter_library</depend>
  <depend>geometry_msgs</depend>
  <depend>libboost-dev</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_hmi_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>visualization_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
